--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -44,7 +44,7 @@
                 <span class="sr-only">Success</span>
             </div>
             <p class="mb-4 text-lg font-semibold text-gray-900">Order Created Successfully</p>
-            <a href="/orderHistory" data-modal-toggle="successModal" type="a href="/orderHistory"" class="font-bold py-2 px-3 text-sm text-center text-gray-900 rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 bg-green-500 hover:bg-sky-500">
+            <a href="/sortOrdersUser/recentOrders" data-modal-toggle="successModal" type="a href="/orderHistory"" class="font-bold py-2 px-3 text-sm text-center text-gray-900 rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 bg-green-500 hover:bg-sky-500">
                 Order Histroy
             </a>
         </div>
