--- a/views/user/addressAdd.ejs
+++ b/views/user/addressAdd.ejs
@@ -11,7 +11,6 @@
       <div class="border-b border-gray-900/10 pb-12">
       <div class="border-b border-gray-900/10 pb-12">
         <h2 class="text-base font-semibold leading-7 text-gray-900">Personal Information</h2>
-        <p class="mt-1 text-sm leading-6 text-gray-600">Use a permanent address where you can receive mail.</p>
         <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
           <div class="sm:col-span-3">
             <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Name</label>
@@ -76,5 +75,30 @@
 
 </main>
 
+<script>
+  function parseQueryParams() {
+      var queryParams = {};
+      var queryString = window.location.search.substring(1);
+      var params = queryString.split("&");
+      for (var i = 0; i < params.length; i++) {
+          var pair = params[i].split("=");
+          queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+      }
+      return queryParams;
+  }
+
+  document.addEventListener('DOMContentLoaded', function() {
+      var queryParams = parseQueryParams();
+      var message = queryParams['message'];
+      var type = queryParams['type'];
+      if (message) {
+          if (type === 'success') {
+              toastr.success(message);
+          } else if (type === 'error') {
+              toastr.error(message);
+          }
+      }
+  });
+</script>
 
 <%- include('../partials/footer') %>
