order repayment bug fixed

--- a/views/user/orderDetailsUser.ejs
+++ b/views/user/orderDetailsUser.ejs
@@ -314,7 +314,7 @@ function exportToPDF() {
     order = data.id;
     var options = {
       "key": "rzp_test_3aIOQlQc4egRLE",
-      "amount": totalPrice * 100,
+      "amount": 3333 * 100,
       "currency": "INR",
       "name": "OneCart",
       "description": "Test Transaction",
