recend orders default to order history

--- a/views/partials/userProfileSidebar.ejs
+++ b/views/partials/userProfileSidebar.ejs
@@ -163,7 +163,7 @@
               </span>
               <span>My Address</span>
             </a>
-              <a href="/orderHistory" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
+              <a href="/sortOrdersUser/recentOrders" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
               >
                 <span
                   aria-hidden="true"
