product page redirecting bug fixed

--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -66,7 +66,7 @@
 
 
                     <td class="px-6 py-4">
-                        <a href="/admin/product-block/<%= product._id %>" class="font-medium text-red-950">
+                        <a href="/admin/product-block/<%= product._id %>?returnUrl=<%= encodeURIComponent(originalUrl) %>" class="font-medium text-red-950">
                             <% if (product.deleted == false) { %>
                                 <span class="relative flex h-3 w-3">
                                     <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"> </span>
