--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -80,10 +80,8 @@
                             <% } %>    
                         </td>
          
-
-
                     <td class="px-4 md:px-6 py-4">
-                        <a href="/admin/product-edit/<%= product._id %>" class="font-medium font-sans text-gray-950 hover:underline">
+                        <a href="/admin/product-edit/<%= product._id %>?returnUrl=<%= encodeURIComponent(originalUrl) %>" class="font-medium font-sans text-gray-950 hover:underline">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
                             </svg>
@@ -93,7 +91,6 @@
                 <% }); %>
             </tbody>
         </table>
-  
 
         <section class="text-center w-full sm:w-3/4 mx-auto border-t flex justify-center py-6   ">
             <% if (currentPage > 1) { %>
