--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -161,7 +161,31 @@
 
 
     </main>
-
+    <script>
+      function parseQueryParams() {
+          var queryParams = {};
+          var queryString = window.location.search.substring(1);
+          var params = queryString.split("&");
+          for (var i = 0; i < params.length; i++) {
+              var pair = params[i].split("=");
+              queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+          }
+          return queryParams;
+      }
+  
+      document.addEventListener('DOMContentLoaded', function() {
+          var queryParams = parseQueryParams();
+          var message = queryParams['message'];
+          var type = queryParams['type'];
+          if (message) {
+              if (type === 'success') {
+                  toastr.success(message);
+              } else if (type === 'error') {
+                  toastr.error(message);
+              }
+          }
+      });
+  </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 
