orderDetailsAdmin unwanted contentents removed

--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -33,7 +33,7 @@
       <!---------------- order table ----------------->
     <section>
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 mb-12">
-        <thead class="text-xs text-gray-700 uppercase bg-yellow-500  dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-red-600  dark:text-gray-400">
             <tr>
                <th scope="col" class="px-6 3">Username</th>
                <th scope="col" class="px-6 py-3">Total</th>
