coupon expiry date validation fixed

--- a/views/admin/coupon-add.ejs
+++ b/views/admin/coupon-add.ejs
@@ -23,11 +23,11 @@
                   <textarea type="" name="description" id="description" class="h-20 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" ></textarea>
                 </div>
                 <div class="md:col-span-5">
-                  <label for="discount">Discount </label>
+                  <label for="discount">Discount in Percentage</label>
                   <input type="number" name="discount" id="discount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
-                  <label for="minimumAmount">Minimum Amount </label>
+                  <label for="minimumAmount">Minimum Amount</label>
                   <input type="number" name="minimumAmount" id="minimumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
