--- a/views/partials/userProfileSidebar.ejs
+++ b/views/partials/userProfileSidebar.ejs
@@ -70,9 +70,11 @@
             <!-- Menu button -->
             <button
               @click="(isSidebarOpen && currentSidebarTab == 'linksTab') ? isSidebarOpen = false : isSidebarOpen = true; currentSidebarTab = 'linksTab'"
-              class="p-2 transition rounded-lg shadow-md hover:bg-red-600 bg-sky-500 hover:text-white focus:outline-none focus:ring focus:ring-indigo-600 focus:ring-offset-white focus:ring-offset-2"
-              :class="(isSidebarOpen && currentSidebarTab == 'linksTab') ? 'text-white bg-indigo-600' : 'text-gray-500'">
-              <span class="sr-only">Toggle sidebar</span>
+              class="p-2 transition rounded-full shadow-md hover:bg-blue-600 bg-gray-800 hover:text-white focus:outline-none focus:ring focus:ring-indigo-600 focus:ring-offset-white focus:ring-offset-2 h-10 w-12"
+              :class="(isSidebarOpen && currentSidebarTab == 'linksTab') ? 'text-white bg-indigo-600' : 'text-gray-900'">
+              <span class="text-white text-xs michroma-regular">
+              open
+              </span>
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
               </svg>
             </button>
