added no found page for serach

--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -35,6 +35,14 @@
     </div>
   </section> -->
 
+  <% if(product.length === 0){ %>
+    <section class="flex flex-col text-center justify-center mt-8">
+      <div>
+        <span>No Product Found</span>
+      </div>
+     
+      </section>
+      <% }else{ %>
 <section class="mt-5">
     <div class="bg-white flex">
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
@@ -68,19 +76,7 @@
     </div>
 </section>
 
-<section class="flex justify-center mt-8">
-  <div class="">
-    <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> < </button> -->
-   <!-- <% for(let i = 1; i < totalProduct + 1; i++){ %>
-
- 
-
-
-   <% } %> -->
-   <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> > </button> -->
-  </div>
-</section>
-
+<% } %>
 </main>
 
 <script>
