--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -79,8 +79,6 @@
                 <% products.forEach((product) => { %>
                   <% if (product.extras == 'New Arrivals') { %>
                 <div class="group relative">
-
-
                   <div class="relative aspect-h-1 h-[350px] sm:h-[450px] overflow-hidden">
                     <img src="/product_images/<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 group-hover:opacity-0"/>
                     <img src="/product_images/<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 group-hover:opacity-100"/>
@@ -96,9 +94,9 @@
                             <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
                         </div>
                        
-                        <% if(product.offer && product.offer[0] && product.offer[0].offerPrice) { %>
-                          <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.price %>.00</h1>
-                          <h1 class="text-1xl font-medium">₹<%- product.offer[0].offerPrice %>.00</h1>
+                        <% if(product.offer.length > 0){ %>
+                          <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.offer[0].originalPrice %>.00</h1>
+                          <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                         <% } else { %>
                           <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                         <% } %>
@@ -184,9 +182,9 @@
                               </h3>
                               <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
                           </div>
-                          <% if(product.offer && product.offer[0] && product.offer[0].offerPrice) { %>
-                            <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.price %>.00</h1>
-                            <h1 class="text-1xl font-medium ml-2">₹<%- product.offer[0].offerPrice %>.00</h1>
+                          <% if(product.offer.length > 0){ %>
+                            <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.offer[0].originalPrice %>.00</h1>
+                            <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                           <% } else { %>
                             <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                           <% } %>
@@ -234,9 +232,9 @@
                           </h3>
                           <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
                       </div>
-                      <% if(product.offer && product.offer[0] && product.offer[0].offerPrice) { %>
-                        <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.price %>.00</h1>
-                        <h1 class="text-1xl font-medium">₹<%- product.offer[0].offerPrice %>.00</h1>
+                      <% if(product.offer.length > 0){ %>
+                        <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.offer[0].originalPrice %>.00</h1>
+                        <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                       <% } else { %>
                         <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                       <% } %>
