otp resend done

--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -126,7 +126,7 @@
     </script>
 
 
-    <!-- <script>
+    <script>
         
 const otpTimerDuration = 60;
 let otpTimer = otpTimerDuration;
@@ -148,7 +148,7 @@ function updateOTPTimer() {
 
 // Start the OTP timer countdown
 const timerInterval = setInterval(updateOTPTimer, 1000);
-</script> -->
+</script>
 <script>
     document.getElementById('resendOTP').addEventListener('click', function(event) {
         event.preventDefault();
