fix: product-add page ui fix

--- a/src/views/admin/product-add.ejs
+++ b/src/views/admin/product-add.ejs
@@ -30,9 +30,9 @@
 <main>
 
       <section>
-        <form method="POST" action="/admin/product-add" enctype="multipart/form-data"> 
+        <form method="POST" action="/admin/product-add" enctype="multipart/form-data" class="w-full"> 
             <div class="min-h-screen bg-gray-100 flex items-start justify-start pl-24 pt-20">
-                <div class="w-auto">
+                <div class="w-full">
                   <div>
                     <h2 class="font-semibold text-xl text-gray-600 hover:text-sky-400"></h2>
                     <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
