--- a/src/views/partials/adminHeader.ejs
+++ b/src/views/partials/adminHeader.ejs
@@ -1412,30 +1412,30 @@ video {
             <span class="text-1xl michroma-regular">OneCart</span>
         </a>
         <ul class="mt-4">
-            <li class="mb-5 group  border-b border-gray-300">
-                <a href="/admin/dashboard" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
+            <li class="mb-5 group border-b border-gray-300">
+                <a href="/admin/dashboard" class="flex font-semibold items-center py-2 px-4 hover:text-white text-gray-900 hover:bg-gray-950 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                     <i class="ri-home-2-line mr-3 text-lg"></i>
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Dashboard</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Dashboard</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/userManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Users</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Users</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/product-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Products</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Products</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/category-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Categories</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Categories</span>
                 </a>
             </li>
     
@@ -1449,26 +1449,26 @@ video {
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/coupon-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Coupons</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Coupons</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/offerManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Offers</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Offers</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/salesReport" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Sales</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Sales</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/admin-logout" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                
-                    <span class="text-sm comfortaa-uniquifier text-gray-950">Logout</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950 hover:text-white">Logout</span>
                 </a>
             </li>
         </ul>
